	Schmidl.

	Make +{num} and similar options work (actually affect cursor of the view).
	Thanks to filterfalse.

	Treat "+" option the same way as Vim (like :$).  Thanks to filterfalse.

	Read error output of background commands independently of main
	thread (prevents blocking of tools which produce huge amount of output).
	Thanks to Stas Malavin.

	Fixed redirecting stdout of background commands to /dev/null, which could
	be unwritable descriptor.  Thanks to c02y.

	Fixed inconsistent file name demangling on moving files from trash in
	custom view.

	Fixed decreasing number of selected files after zd operation.

	Fixed wrong whole value completion of string list options if entered value
	contains a comma (,).

	Fixed displaying of previous status bar message on 'hlsearch' 'noincsearch'
	when match occurs.  Thanks to filterfalse.

	Fixed incorrect completion of non-first option name of the :set command.

	Fixed assertion failure on file rename of specific pattern (renaming files
	1, 2 via `:rename 2 3` is the shortest example).  Thanks to aleksejrs.

	Fixed rejecting to clone files in custom view, when name is specified
	explicitly (form without arguments was properly disabled before).

	Fixed changing attributes of files in custom views on Windows.

	Fixed counting selected files after `:invert s` if there is ".." entry.

	Fixed :pushd and :dirs in custom views.

	Fixed ruler update on `--remote --select`.  Thanks to Marcin
	Kurczewski (a.k.a. rr-).

	Fixed small leak after aborting on name conflict.

	Fixed possible data loss on moving/copying files over their own parent or
	child directories via p, P, :move, :copy, :alink and :rlink.  Thanks to
	Marius Schmidl.

	Fixed concatenation of error lists without separator (newline).  Thanks to
	Behrooz.

	Fixed possible memory leak on querying file mime-type (when it wasn't
	obtained).

	Fixed buffer overflow on obtaining file mime-type.  Thanks to Abdó
	Roig-Maranges (a.k.a. aroig).
