@@ -97,6 +97,9 @@
 	thread (prevents blocking of tools which produce huge amount of output).
 	Thanks to Stas Malavin.
 
+	Limit maximum height of message popup, just print how many lines we're
+	skipping.
+
 	Fixed redirecting stdout of background commands to /dev/null, which could
 	be unwritable descriptor.  Thanks to c02y.
 
